[metadata]
name = aaclient
version = 0.0.1
description = Tools to query Archiver Appliance and export data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdavidsaver/aaclient
author = Michael Davidsaver
author_email = mdavidsaver@gmail.com
license = BSD
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy>=1.7.0
    Cython>=0.20

packages =
    aaclient
    aaclient.cmd
    aaclient.test

[options.entry_points]
console_scripts =
    arget = aaclient.cmd.get:main
    arh5 = aaclient.cmd.h5:main
    argrep = aaclient.cmd.grep:main
