[metadata]
name = aaclient
version = 0.0.5
description = Tools to query Archiver Appliance and export data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdavidsaver/aaclient
author = Michael Davidsaver
author_email = mdavidsaver@gmail.com
license = BSD
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy>=1.7.0
    numpy<3
    Cython>=0.20
    aiohttp >= 3.7.0

packages =
    aaclient
    aaclient.cmd
    aaclient.test

[options.package_data]
* = *.pb

[options.extras_require]
hdf5 = h5py

[options.entry_points]
console_scripts =
    aaget = aaclient.cmd.get:main
    aah5 = aaclient.cmd.h5:main
    aagrep = aaclient.cmd.grep:main
